--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <script defer src="assets/script.js"></script>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
-    <section class="min-h-screen flex items-center justify-center bg-cover bg-center" 
-    style="background-image: url('assets/book-cover.jpg');">
-        <div class="bg-black bg-opacity-50 p-10 text-center rounded-lg">
-            <h1 class="text-4xl font-bold text-white">Life's Blueprint: Goals, Gratitude, and Growing Beyond Boundaries</h1>
-            <p class="mt-4 text-lg text-white">by Cierra U. Malone</p>
-            <a id="buyButton" href="checkout.html" class="mt-6 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">Buy Now for $23.99</a>
-        </div>
-    </section>
+    <section class="min-h-screen flex items-center justify-center">
+    <div class="text-center">
+        <img src="./assets/book-cover.jpg" alt="Life's Blueprint Book Cover" class="w-64 mx-auto rounded-lg shadow-lg">
+        <h1 class="text-4xl font-bold mt-4">Life's Blueprint: Goals, Gratitude, and Growing Beyond Boundaries</h1>
+        <p class="mt-2 text-lg">by Cierra U. Malone</p>
+        <a id="buyButton" href="checkout.html" class="mt-6 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
+            Buy Now for $23.99
+        </a>
+    </div>
+</section>
 </body>
 </html>
 
