--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
     </section>
 
     <!-- Buy Section -->
-    <section id="buy" class="container mx-auto px-6 py-12 text-center">
-        <h2 class="text-3xl font-semibold">Get Your Copy Today</h2>
-        <a id="buyButton" href="checkout.html" class="mt-6 inline-block px-6 py-3 bg-green-500 text-white rounded-lg text-lg shadow-lg hover:bg-green-600">
-            Buy Now for $23.99
-        </a>
-    </section>
+<section id="buy" class="container mx-auto px-6 py-12 text-center">
+    <h2 class="text-3xl font-semibold">Get Your Copy Today</h2>
+    <p class="mt-2 text-lg font-semibold">Price: $23.99</p> <!-- Price added here -->
+    <a id="buyButton" href="checkout.html" class="mt-6 inline-block px-6 py-3 bg-green-500 text-white rounded-lg text-lg shadow-lg hover:bg-green-600">
+        Buy Now
+    </a>
+</section>
 
     <!-- Footer -->
     <footer class="py-6 bg-gray-800 text-white text-center">
