--- a/assets/checkout.html
+++ b/assets/checkout.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Checkout - Life's Blueprint</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
+
+    <section class="container mx-auto px-6 py-12 text-center">
+        <h2 class="text-3xl font-semibold">Checkout</h2>
+        <p class="mt-2 text-lg font-semibold">You're purchasing: <strong>Life's Blueprint: Goals, Gratitude, and Growing Beyond Boundaries</strong></p>
+        <p class="mt-2 text-lg font-semibold">Price: $23.99</p>
+
+        <!-- Payment Link -->
+        <a href="https://paypal.me/teamcierramalone?country.x=US&locale.x=en_US" 
+           class="mt-6 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
+           Pay with PayPal
+        </a>
+        
+        <!-- Back Button -->
+        <div class="mt-6">
+            <a href="index.html" class="text-blue-500 hover:underline">Back to Home</a>
+        </div>
+    </section>
+
+</body>
+</html>
 
