--- a/index.html
+++ b/index.html
@@ -3,69 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cierra U. Malone - Life's Blueprint</title>
+    <title>Life's Blueprint by Cierra U. Malone</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script defer src="assets/script.js"></script>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
-    
+
     <!-- Hero Section -->
-    <section class="min-h-screen flex flex-col items-center justify-center text-center p-6">
-        <img src="assets/book-cover.jpg" alt="Life's Blueprint Book Cover" class="w-64 rounded-lg shadow-lg">
-        <h1 class="text-4xl font-bold mt-6">Life's Blueprint: Goals, Gratitude, and Growing Beyond Boundaries</h1>
-        <p class="mt-4 text-lg">by Cierra U. Malone</p>
-        <a id="buyButton" href="checkout.html" class="mt-6 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
-            Buy Now for $23.99
-        </a>
+    <section class="min-h-screen flex items-center justify-center bg-cover bg-center bg-blue-900 text-white p-12">
+        <div class="text-center">
+            <h1 class="text-5xl font-bold">Life's Blueprint: Goals, Gratitude, and Growing Beyond Boundaries</h1>
+            <p class="mt-4 text-xl">by Cierra U. Malone</p>
+            <p class="mt-2 italic">"Strength does not come from winning. Your struggles develop your strengths." – Arnold Schwarzenegger</p>
+            <img src="assets/book-cover.jpg" alt="Book Cover" class="mx-auto mt-6 rounded-lg shadow-lg w-64">
+            <a id="buyButton" href="checkout.html" class="mt-6 inline-block px-6 py-3 bg-green-500 text-white rounded-lg text-lg shadow-lg hover:bg-green-600">
+                Buy Now
+            </a>
+        </div>
     </section>
 
     <!-- About the Author -->
     <section class="container mx-auto px-6 py-12 text-center">
-        <h2 class="text-3xl font-semibold">Meet the Author</h2>
-        <img src="assets/IMG_3153.png" alt="Cierra U. Malone" class="mx-auto mt-4 rounded-full w-48 h-48 object-cover shadow-lg">
+        <h2 class="text-3xl font-semibold text-blue-900">Meet the Author</h2>
+        <img src="assets/cierra-malone.jpg" alt="Cierra U. Malone" class="mx-auto mt-4 rounded-full w-48 h-48 shadow-lg">
         <p class="mt-4 text-lg">
-            Cierra U. Malone is an inspiring author dedicated to empowering individuals through personal development and self-growth.
+            Cierra U. Malone is an educator and entrepreneur from Cleveland, Ohio. She is a former athlete and aspires to create her own charter school.
         </p>
     </section>
 
-    <!-- Book Highlights -->
+    <!-- Mentoring & Speaking Engagements -->
+    <section class="bg-gray-200 dark:bg-gray-800 text-center py-12">
+        <h2 class="text-3xl font-semibold text-blue-900">Speaking Engagements & Mentorship</h2>
+        <p class="mt-4 text-lg">
+            Looking for an inspiring speaker? Cierra U. Malone offers mentoring and leadership talks for businesses, schools, and events.
+        </p>
+        <a href="mailto:teamcierramalone@gmail.com" class="mt-4 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
+            Book a Session
+        </a>
+    </section>
+
+    <!-- Social Media Links -->
     <section class="container mx-auto px-6 py-12 text-center">
-        <h2 class="text-3xl font-semibold">What You'll Learn</h2>
-        <div class="mt-6 grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md">
-                <h3 class="text-xl font-semibold">Goal Setting Strategies</h3>
-                <p class="mt-2">Master the art of setting and achieving meaningful goals.</p>
-            </div>
-            <div class="p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md">
-                <h3 class="text-xl font-semibold">Power of Gratitude</h3>
-                <p class="mt-2">Discover how gratitude can transform your mindset and success.</p>
-            </div>
-            <div class="p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md">
-                <h3 class="text-xl font-semibold">Overcoming Challenges</h3>
-                <p class="mt-2">Learn practical steps to push past obstacles and grow beyond boundaries.</p>
-            </div>
+        <h2 class="text-3xl font-semibold text-blue-900">Follow & Connect</h2>
+        <p class="mt-4 text-lg">Stay updated and join the conversation:</p>
+        <div class="mt-4 flex justify-center space-x-4">
+            <a href="https://www.instagram.com/cierramalone" class="text-blue-500 hover:underline">Instagram</a>
+            <a href="https://www.facebook.com/CierraUMalone" class="text-blue-500 hover:underline">Facebook</a>
+            <a href="mailto:teamcierramalone@gmail.com" class="text-blue-500 hover:underline">Email</a>
         </div>
     </section>
 
-    <!-- Testimonials -->
-    <section class="container mx-auto px-6 py-12 text-center bg-gray-200 dark:bg-gray-800">
-        <h2 class="text-3xl font-semibold">What Readers Are Saying</h2>
-        <p class="mt-4 text-lg italic">
-            "This book changed my life! A must-read for anyone seeking growth." – Reader Review
-        </p>
+    <!-- Newsletter Signup -->
+    <section class="bg-gray-300 text-center py-12">
+        <h2 class="text-3xl font-semibold text-blue-900">Join My Newsletter</h2>
+        <p class="mt-4 text-lg">Get exclusive content, updates, and motivation directly in your inbox.</p>
+        <form action="#" method="POST" class="mt-6">
+            <input type="email" placeholder="Enter your email" class="px-4 py-2 rounded-lg shadow-lg w-80">
+            <button type="submit" class="mt-4 inline-block px-6 py-3 bg-green-500 text-white rounded-lg text-lg shadow-lg hover:bg-green-600">
+                Subscribe
+            </button>
+        </form>
     </section>
 
-    <!-- Buy Section -->
-<section id="buy" class="container mx-auto px-6 py-12 text-center">
-    <h2 class="text-3xl font-semibold">Get Your Copy Today</h2>
-    <p class="mt-2 text-lg font-semibold">Price: $23.99</p> <!-- Price added here -->
-    <a id="buyButton" href="checkout.html" class="mt-6 inline-block px-6 py-3 bg-green-500 text-white rounded-lg text-lg shadow-lg hover:bg-green-600">
-        Buy Now
-    </a>
-</section>
-
     <!-- Footer -->
-    <footer class="py-6 bg-gray-800 text-white text-center">
+    <footer class="py-6 bg-blue-900 text-white text-center">
         <p>&copy; 2025 Cierra U. Malone. All rights reserved.</p>
     </footer>
 
