--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <!-- About the Author -->
     <section class="container mx-auto px-6 py-12 text-center">
         <h2 class="text-3xl font-semibold text-blue-900">Meet the Author</h2>
-      <img src="assets/IMG_3153.png" alt="Cierra U. Malone" class="mx-auto mt-4 rounded-lg w-full max-w-sm shadow-lg">
+      <img src="assets/IMG_3153.png" 
+     alt="Cierra U. Malone" 
+     class="mx-auto mt-4 rounded-lg w-64 h-auto shadow-lg">
         <p class="mt-4 text-lg">
             Cierra U. Malone is an educator and entrepreneur from Cleveland, Ohio. She is a former athlete and aspires to create her own charter school.
         </p>
