--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
         <h2 class="text-3xl font-semibold text-blue-900">Follow & Connect</h2>
         <p class="mt-4 text-lg">Stay updated and join the conversation:</p>
         <div class="mt-4 flex justify-center space-x-4">
-            <a href="https://www.instagram.com/cierramalone" class="text-blue-500 hover:underline">Instagram</a>
-            <a href="https://www.facebook.com/CierraUMalone" class="text-blue-500 hover:underline">Facebook</a>
+            <a href="https://www.instagram.com/cierraumalone?igsh=d3BhbTJvZ3NqeGM4" 
+   target="_blank" 
+   class="text-blue-500 hover:underline">
+   Follow on Instagram
+</a>
+<a href="https://www.facebook.com/CierraUMalone" class="text-blue-500 hover:underline">Facebook</a>
             <a href="mailto:teamcierramalone@gmail.com" class="text-blue-500 hover:underline">Email</a>
         </div>
     </section>
