--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="https://www.instagram.com/cierraumalone?igsh=d3BhbTJvZ3NqeGM4" 
    target="_blank" 
    class="text-blue-500 hover:underline">
-   Follow on Instagram
+   Instagram
 </a>
 <a href="https://www.facebook.com/CierraUMalone" class="text-blue-500 hover:underline">Facebook</a>
             <a href="mailto:teamcierramalone@gmail.com" class="text-blue-500 hover:underline">Email</a>
