--- a/index.html
+++ b/index.html
@@ -21,14 +21,23 @@
         </div>
     </section>
 
-    <!-- About the Author -->
-   <p class="mt-4 text-lg">
-    Cierra U. Malone is an educator and entrepreneur, born and raised in Cleveland, Ohio. 
-    She is a graduate of Cleveland City Schools and is dedicated to empowering individuals 
-    through education and leadership. She aspires to establish her own charter school, 
-    where she can create a learning environment that fosters academic excellence, innovation, 
-    and equity for all students.
-</p>
+   <!-- About the Author -->
+<section class="container mx-auto px-6 py-12 text-center">
+    <h2 class="text-3xl font-semibold text-blue-900">Meet the Author</h2>
+    
+    <!-- Add the author image here -->
+    <img src="assets/IMG_3153.png" alt="Cierra U. Malone" 
+         class="mx-auto mt-4 rounded-full w-48 h-48 object-cover shadow-lg">
+    
+    <p class="mt-4 text-lg">
+        Cierra U. Malone is an educator and entrepreneur, born and raised in Cleveland, Ohio. 
+        She is a graduate of Cleveland City Schools and is dedicated to empowering individuals 
+        through education and leadership. She aspires to establish her own charter school, 
+        where she can create a learning environment that fosters academic excellence, innovation, 
+        and equity for all students.
+    </p>
+</section>
+
 
     <!-- Mentoring & Speaking Engagements -->
     <section class="bg-gray-200 dark:bg-gray-800 text-center py-12">
