--- a/checkout.html
+++ b/checkout.html
@@ -14,10 +14,11 @@
         <p class="mt-2 text-lg font-semibold">Price: $23.99</p>
 
         <!-- Payment Link -->
-        <a href="https://paypal.me/teamcierramalone?country.x=US&locale.x=en_US" 
-           class="mt-6 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
-           Pay with PayPal
-        </a>
+<a href="https://paypal.me/teamcierramalone/23.99"
+   class="mt-6 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
+   Pay with PayPal
+</a>
+
         
         <!-- Back Button -->
         <div class="mt-6">
