--- a/checkout.html
+++ b/checkout.html
@@ -19,6 +19,24 @@
    Pay with PayPal
 </a>
 
+<!-- Thank You Message -->
+<div class="mt-10 text-center">
+    <h2 class="text-2xl font-bold text-gray-900 dark:text-gray-100">
+        Thank You for Purchasing!
+    </h2>
+    <p class="mt-2 text-lg text-gray-700 dark:text-gray-300">
+        Your support means the world! I hope this book inspires and empowers you.  
+    </p>
+</div>
+
+<!-- Author Image -->
+<div class="flex justify-center mt-6">
+    <img src="assets/IMG_3154.png" 
+         alt="Cierra U. Malone" 
+         class="rounded-lg shadow-lg w-48 h-48 object-cover">
+</div>
+
+
         
         <!-- Back Button -->
         <div class="mt-6">
