--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
 
+    <!-- Navigation Bar -->
+    <nav class="bg-blue-600 text-white py-4 fixed top-0 left-0 w-full shadow-lg">
+        <div class="container mx-auto flex justify-between items-center px-6">
+            <!-- Logo / Site Title -->
+            <a href="index.html" class="text-2xl font-bold">Life's Blueprint</a>
+            
+            <!-- Navigation Links -->
+            <ul class="flex space-x-6">
+                <li><a href="index.html" class="hover:underline">Home</a></li>
+                <li><a href="#about" class="hover:underline">About the Author</a></li>
+                <li><a href="checkout.html" class="hover:underline">Buy Now</a></li>
+                <li><a href="mailto:teamcierramalone@gmail.com" class="hover:underline">Book a Session</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Add spacing so content isn't hidden behind the fixed navbar -->
+    <div class="h-16"></div>
+
+
     <!-- Hero Section -->
     <section class="min-h-screen flex items-center justify-center bg-cover bg-center bg-blue-900 text-white p-12">
         <div class="text-center">
