Fixed book cover image path

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 class="text-5xl font-bold">Life's Blueprint: Goals, Gratitude, and Growing Beyond Boundaries</h1>
             <p class="mt-4 text-xl">by Cierra U. Malone</p>
             <p class="mt-2 italic">"Strength does not come from winning. Your struggles develop your strengths." – Arnold Schwarzenegger</p>
-            <img src="assets/cierramalonebookcover1.2.jpg" alt="Book Cover" class="mx-auto mt-6 rounded-lg shadow-lg w-64">
+            <img src="assets/CierraMaloneBookCover1.2.png" alt="Book Cover" class="mx-auto mt-6 rounded-lg shadow-lg w-64">
 
             <a id="buyButton" href="checkout.html" class="mt-6 inline-block px-6 py-3 bg-green-500 text-white rounded-lg text-lg shadow-lg hover:bg-green-600">
                 Buy Now
