Updated payment link

--- a/checkout.html
+++ b/checkout.html
@@ -14,9 +14,9 @@
         <p class="mt-2 text-lg font-semibold">Price: $23.99</p>
 
         <!-- Payment Link -->
-<a href="https://paypal.me/teamcierramalone/23.99"
-   class="mt-6 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
-   Pay with PayPal
+<a href="https://a.co/d/1yzYxuD" 
+   class="mt-6 inline-block px-6 py-3 bg-yellow-500 text-white rounded-lg text-lg shadow-lg hover:bg-yellow-600">
+   Buy on Amazon
 </a>
 
 <!-- Thank You Message -->
