--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <!-- Hero Section -->
-    <section class="min-h-screen flex items-center justify-center bg-cover bg-center bg-blue-900 text-white p-12">
+    <section class="min-h-screen flex items-center justify-center p-12" style="background-color: #f7e6ea;">
         <div class="text-center">
             <h1 class="text-5xl font-bold">Life's Blueprint: Goals, Gratitude, and Growing Beyond Boundaries</h1>
             <p class="mt-4 text-xl">by Cierra U. Malone</p>
