--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <li><a href="index.html" class="hover:underline">Home</a></li>
                 <li><a href="#about" class="hover:underline">About the Author</a></li>
                 <li><a href="checkout.html" class="hover:underline">Buy Now</a></li>
-                <li><a href="mailto:teamcierramalone@gmail.com" class="hover:underline">Book a Session</a></li>
+                <li> <a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="hover:underline">
+    Book a Session
+  </a></li>
             </ul>
         </div>
     </nav>
