--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         <h2 class="text-3xl font-semibold text-blue-900">Speaking Engagements & Mentorship</h2>
         <p class="mt-4 text-lg">
             Looking for an inspiring speaker? Cierra U. Malone offers mentoring and leadership talks for businesses, schools, and events.
-        </p>
-        <a href="mailto:teamcierramalone@gmail.com" class="mt-4 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
+        </p>href="https://calendly.com/teamcierramalone/30min" class="mt-4 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
             Book a Session
         </a>
     </section>
