--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <!-- Navigation Bar -->
     <nav class="bg-blue-600 text-white py-4 fixed top-0 left-0 w-full shadow-lg">
         <div class="container mx-auto flex justify-between items-center px-6">
-            <!-- Logo / Site Title -->
-            <div class="flex items-center space-x-4">
-  <img src="assets/cierra-logo.png" alt="Cierra U. Malone Logo" class="h-10 w-10 rounded-full">
+            <!-- Logo and Site Title -->
+<div class="flex items-center space-x-4">
+  <img src="assets/cieereumalonelogo.png" alt="Cierra U. Malone Logo" class="h-10 w-10 rounded-full">
   <a href="index.html" class="text-2xl font-bold">Life's Blueprint</a>
+</div>
+
 </div>
 
             
@@ -107,10 +109,11 @@
     </section>
 
     <!-- Footer -->
-    <footer class="py-6 bg-blue-900 text-white text-center">
-  <img src="assets/cierra-logo.png" alt="Cierra U. Malone Logo" class="mx-auto h-12 w-12 mb-2 rounded-full">
+<footer class="py-6 bg-blue-900 text-white text-center">
+  <img src="assets/cieereumalonelogo.png" alt="Cierra U. Malone Logo" class="mx-auto h-12 w-12 mb-2 rounded-full">
   <p>&copy; 2025 Cierra U. Malone. All rights reserved.</p>
 </footer>
+
 
 
 </body>
