--- a/index.html
+++ b/index.html
@@ -8,29 +8,25 @@
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
 
-    <!-- Navigation Bar -->
-    <nav class="bg-blue-600 text-white py-4 fixed top-0 left-0 w-full shadow-lg">
-        <div class="container mx-auto flex justify-between items-center px-6">
-            <!-- Logo and Site Title -->
-<div class="flex items-center space-x-4">
-  <img src="assets/cieereumalonelogo.png" alt="Cierra U. Malone Logo" class="h-10 w-10 rounded-full">
-  <a href="index.html" class="text-2xl font-bold">Life's Blueprint</a>
-</div>
+   <!-- Navigation Bar -->
+<nav class="bg-blue-600 text-white py-4 fixed top-0 left-0 w-full shadow-lg z-50">
+  <div class="container mx-auto flex justify-between items-center px-6">
+    <!-- Logo on the left -->
+    <div class="flex items-center space-x-2">
+      <img src="assets/cieereumalonelogo.png" alt="Cierra U. Malone Logo" class="h-10 w-auto">
+      <a href="index.html" class="text-2xl font-bold">Life's Blueprint</a>
+    </div>
 
-</div>
+    <!-- Navigation Links on the right -->
+    <ul class="flex space-x-6">
+      <li><a href="index.html" class="hover:underline">Home</a></li>
+      <li><a href="#about" class="hover:underline">About the Author</a></li>
+      <li><a href="checkout.html" class="hover:underline">Buy Now</a></li>
+      <li><a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="hover:underline">Book a Session</a></li>
+    </ul>
+  </div>
+</nav>
 
-            
-            <!-- Navigation Links -->
-            <ul class="flex space-x-6">
-                <li><a href="index.html" class="hover:underline">Home</a></li>
-                <li><a href="#about" class="hover:underline">About the Author</a></li>
-                <li><a href="checkout.html" class="hover:underline">Buy Now</a></li>
-                <li><a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="hover:underline">
-    Book a Session
-  </a></li>
-            </ul>
-        </div>
-    </nav>
 
     <!-- Add spacing so content isn't hidden behind the fixed navbar -->
     <div class="h-16"></div>
