--- a/index.html
+++ b/index.html
@@ -1,116 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life's Blueprint by Cierra U. Malone</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Life's Blueprint by Cierra U. Malone</title>
+
+  <!-- Tailwind CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+
+  <!-- Custom Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
+<body class="bg-white text-gray-900">
 
-   <!-- Navigation Bar -->
-<nav class="bg-blue-600 text-white py-4 fixed top-0 left-0 w-full shadow-lg z-50">
-  <div class="container mx-auto flex justify-between items-center px-6">
-    <!-- Logo on the left -->
-    <div class="flex items-center space-x-2">
-      <img src="assets/cieereumalonelogo.png" alt="Cierra U. Malone Logo" class="h-10 w-auto">
-      <a href="index.html" class="text-2xl font-bold">Life's Blueprint</a>
+  <!-- HEADER / NAV -->
+  <nav class="bg-white shadow-md py-4 fixed top-0 left-0 w-full z-50">
+    <div class="container mx-auto flex items-center justify-between px-4 sm:px-6">
+      <!-- Logo Left -->
+      <div class="flex items-center space-x-3">
+        <img src="assets/cieereumalonelogo.png" alt="Logo" class="h-10 w-auto" />
+        <span class="text-xl font-semibold text-gray-900">Life’s Blueprint</span>
+      </div>
+      <!-- Nav Links Right -->
+      <ul class="hidden md:flex space-x-6 text-gray-800 font-medium">
+        <li><a href="#about" class="hover:text-blue-600">About</a></li>
+        <li><a href="checkout.html" class="hover:text-blue-600">Buy Now</a></li>
+        <li><a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="hover:text-blue-600">Book a Session</a></li>
+      </ul>
     </div>
+  </nav>
+  <div class="h-20"></div>
 
-    <!-- Navigation Links on the right -->
-    <ul class="flex space-x-6">
-      <li><a href="index.html" class="hover:underline">Home</a></li>
-      <li><a href="#about" class="hover:underline">About the Author</a></li>
-      <li><a href="checkout.html" class="hover:underline">Buy Now</a></li>
-      <li><a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="hover:underline">Book a Session</a></li>
-    </ul>
-  </div>
-</nav>
+  <!-- HERO -->
+  <section class="bg-gradient-to-r from-yellow-100 via-white to-yellow-50 py-20 text-center px-4 sm:px-6">
+    <div class="max-w-3xl mx-auto">
+      <h1 class="text-4xl sm:text-5xl font-bold text-gray-900 leading-tight">Life’s Blueprint</h1>
+      <p class="text-lg sm:text-xl mt-4 text-gray-700">Goals, Gratitude, and Growing Beyond Boundaries<br />by Cierra U. Malone</p>
+      <p class="mt-2 italic text-gray-600 text-base sm:text-lg">"Strength does not come from winning. Your struggles develop your strengths."</p>
+      <img src="assets/CierraMaloneBookCover1.2.png" alt="Book Cover" class="mx-auto mt-6 w-64 sm:w-80 rounded-lg shadow-xl" />
+      <a href="checkout.html" class="mt-6 inline-block px-8 py-3 bg-blue-600 text-white rounded-full text-lg shadow-lg hover:bg-blue-700 transition duration-300">
+        Buy Now
+      </a>
+    </div>
+  </section>
 
-
-    <!-- Add spacing so content isn't hidden behind the fixed navbar -->
-    <div class="h-16"></div>
-
-
-    <!-- Hero Section -->
-    <section class="min-h-screen flex items-center justify-center p-12" style="background-color: #f7e6ea;">
-        <div class="text-center">
-            <h1 class="text-5xl font-bold">Life's Blueprint: Goals, Gratitude, and Growing Beyond Boundaries</h1>
-            <p class="mt-4 text-xl">by Cierra U. Malone</p>
-            <p class="mt-2 italic">"Strength does not come from winning. Your struggles develop your strengths." – Arnold Schwarzenegger</p>
-            <img src="./assets/CierraMaloneBookCover1.2.png" alt="Book Cover" class="mx-auto mt-6 rounded-lg shadow-lg w-64">
-
-
-            <a id="buyButton" href="checkout.html" class="mt-6 inline-block px-6 py-3 bg-green-500 text-white rounded-lg text-lg shadow-lg hover:bg-green-600">
-                Buy Now
-            </a>
-        </div>
-    </section>
-
-   <!-- About the Author -->
-<section class="container mx-auto px-6 py-12 text-center">
+  <!-- ABOUT THE AUTHOR -->
+  <section id="about" class="container mx-auto px-6 py-16 text-center">
     <h2 class="text-3xl font-semibold text-blue-900">Meet the Author</h2>
-    
-    <!-- Add the author image here -->
-    <img src="assets/IMG_3153.png" alt="Cierra U. Malone" 
-         class="mx-auto mt-4 rounded-full w-48 h-48 object-cover shadow-lg">
-    
-    <p class="mt-4 text-lg">
-        Cierra U. Malone is an educator and entrepreneur, born and raised in Cleveland, Ohio. 
-        She is a graduate of Cleveland City Schools and is dedicated to empowering individuals 
-        through education and leadership. She aspires to establish her own charter school, 
-        where she can create a learning environment that fosters academic excellence, innovation, 
-        and equity for all students.
+    <img src="assets/IMG_3153.png" alt="Cierra U. Malone" class="mx-auto mt-6 rounded-full w-40 h-40 object-cover shadow-md" />
+    <p class="mt-6 text-lg max-w-3xl mx-auto text-gray-700">
+      Cierra U. Malone is an educator and entrepreneur born and raised in Cleveland, Ohio. She is a graduate of Cleveland City Schools and is
+      dedicated to empowering individuals through education and leadership. She aspires to establish her own charter school, where she can create
+      a learning environment that fosters academic excellence, innovation, and equity for all students.
     </p>
-</section>
+  </section>
 
+  <!-- MENTORING & CTA -->
+  <section class="bg-gray-100 py-16 text-center">
+    <h2 class="text-3xl font-semibold text-blue-900">Speaking Engagements & Mentorship</h2>
+    <p class="mt-4 text-lg text-gray-700">Looking for an inspiring speaker? Cierra U. Malone offers mentoring and leadership talks for businesses, schools, and events.</p>
+    <a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="mt-6 inline-block px-6 py-3 bg-blue-600 text-white rounded-full text-lg shadow-lg hover:bg-blue-700">
+      Book a Session
+    </a>
+  </section>
 
-    <!-- Mentoring & Speaking Engagements -->
-    <section class="bg-gray-200 dark:bg-gray-800 text-center py-12">
-        <h2 class="text-3xl font-semibold text-blue-900">Speaking Engagements & Mentorship</h2>
-        <p class="mt-4 text-lg">
-            Looking for an inspiring speaker? Cierra U. Malone offers mentoring and leadership talks for businesses, schools, and events.
-        </p>
-<a href="https://calendly.com/teamcierramalone/30min" target="_blank"
-   class="mt-4 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg text-lg shadow-lg hover:bg-blue-600">
-   Book a Session
-</a>
-    </section>
+  <!-- SOCIAL MEDIA -->
+  <section class="container mx-auto px-6 py-16 text-center">
+    <h2 class="text-3xl font-semibold text-blue-900">Follow & Connect</h2>
+    <p class="mt-4 text-lg text-gray-700">Stay connected and inspired:</p>
+    <div class="mt-6 flex justify-center space-x-6 text-blue-600 text-lg">
+      <a href="https://www.instagram.com/cierraumalone" target="_blank" class="hover:underline">Instagram</a>
+      <a href="https://facebook.com/CierraUMalone" target="_blank" class="hover:underline">Facebook</a>
+      <a href="mailto:teamcierramalone@gmail.com" class="hover:underline">Email</a>
+    </div>
+  </section>
 
-    <!-- Social Media Links -->
-    <section class="container mx-auto px-6 py-12 text-center">
-        <h2 class="text-3xl font-semibold text-blue-900">Follow & Connect</h2>
-        <p class="mt-4 text-lg">Stay updated and join the conversation:</p>
-        <div class="mt-4 flex justify-center space-x-4">
-            <a href="https://www.instagram.com/cierraumalone?igsh=d3BhbTJvZ3NqeGM4" 
-   target="_blank" 
-   class="text-blue-500 hover:underline">
-   Instagram
-</a>
-<a href="https://www.facebook.com/CierraUMalone" class="text-blue-500 hover:underline">Facebook</a>
-            <a href="mailto:teamcierramalone@gmail.com" class="text-blue-500 hover:underline">Email</a>
-        </div>
-    </section>
-
-    <!-- Newsletter Signup -->
-    <section class="bg-gray-300 text-center py-12">
-        <h2 class="text-3xl font-semibold text-blue-900">Join My Newsletter</h2>
-        <p class="mt-4 text-lg">Get exclusive content, updates, and motivation directly in your inbox.</p>
-        <form action="#" method="POST" class="mt-6">
-            <input type="email" placeholder="Enter your email" class="px-4 py-2 rounded-lg shadow-lg w-80">
-            <button type="submit" class="mt-4 inline-block px-6 py-3 bg-green-500 text-white rounded-lg text-lg shadow-lg hover:bg-green-600">
-                Subscribe
-            </button>
-        </form>
-    </section>
-
-    <!-- Footer -->
-<footer class="py-6 bg-blue-900 text-white text-center">
-  <img src="assets/cieereumalonelogo.png" alt="Cierra U. Malone Logo" class="mx-auto h-12 w-12 mb-2 rounded-full">
-  <p>&copy; 2025 Cierra U. Malone. All rights reserved.</p>
-</footer>
-
-
+  <!-- FOOTER -->
+  <footer class="bg-blue-900 text-white text-center py-10">
+    <img src="assets/cieereumalonelogo.png" alt="Logo" class="h-12 mx-auto mb-4" />
+    <p class="text-sm mb-2">&copy; 2025 Cierra U. Malone. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
