--- a/index.html
+++ b/index.html
@@ -5,74 +5,99 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Life's Blueprint by Cierra U. Malone</title>
 
-  <!-- Tailwind CSS CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <!-- Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
   <!-- Custom Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
+    body { font-family: 'Poppins', sans-serif; }
   </style>
 </head>
+
 <body class="bg-white text-gray-900">
 
-  <!-- HEADER / NAV -->
+  <!-- Navigation -->
   <nav class="bg-white shadow-md py-4 fixed top-0 left-0 w-full z-50">
     <div class="container mx-auto flex items-center justify-between px-4 sm:px-6">
-      <!-- Logo Left -->
       <div class="flex items-center space-x-3">
-        <img src="assets/cieereumalonelogo.png" alt="Logo" class="h-10 w-auto" />
-        <span class="text-xl font-semibold text-gray-900">Life’s Blueprint</span>
+        <img src="assets/cieereumalonelogo.png" alt="Logo" class="h-10 w-auto">
+        <span class="text-xl font-bold text-gray-900">Life’s Blueprint</span>
       </div>
-      <!-- Nav Links Right -->
       <ul class="hidden md:flex space-x-6 text-gray-800 font-medium">
         <li><a href="#about" class="hover:text-blue-600">About</a></li>
         <li><a href="checkout.html" class="hover:text-blue-600">Buy Now</a></li>
-        <li><a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="hover:text-blue-600">Book a Session</a></li>
+        <li><a href="#mentorship" class="hover:text-blue-600">Book a Session</a></li>
       </ul>
     </div>
   </nav>
   <div class="h-20"></div>
 
-  <!-- HERO -->
-  <section class="bg-gradient-to-r from-yellow-100 via-white to-yellow-50 py-20 text-center px-4 sm:px-6">
+  <!-- Hero Section -->
+  <section class="bg-gradient-to-r from-yellow-100 via-white to-yellow-50 py-20 text-center px-6">
     <div class="max-w-3xl mx-auto">
-      <h1 class="text-4xl sm:text-5xl font-bold text-gray-900 leading-tight">Life’s Blueprint</h1>
-      <p class="text-lg sm:text-xl mt-4 text-gray-700">Goals, Gratitude, and Growing Beyond Boundaries<br />by Cierra U. Malone</p>
-      <p class="mt-2 italic text-gray-600 text-base sm:text-lg">"Strength does not come from winning. Your struggles develop your strengths."</p>
-      <img src="assets/CierraMaloneBookCover1.2.png" alt="Book Cover" class="mx-auto mt-6 w-64 sm:w-80 rounded-lg shadow-xl" />
-      <a href="checkout.html" class="mt-6 inline-block px-8 py-3 bg-blue-600 text-white rounded-full text-lg shadow-lg hover:bg-blue-700 transition duration-300">
+      <h1 class="text-4xl sm:text-5xl font-bold leading-tight animate-fadeIn">Life’s Blueprint</h1>
+      <p class="text-lg sm:text-xl mt-4 text-gray-700 animate-fadeIn">Goals, Gratitude, and Growing Beyond Boundaries<br>by Cierra U. Malone</p>
+      <p class="mt-2 italic text-gray-600 text-base sm:text-lg animate-fadeIn">"Strength does not come from winning. Your struggles develop your strengths."</p>
+      <img src="assets/CierraMaloneBookCover1.2.png" alt="Book Cover" class="mx-auto mt-8 w-64 sm:w-80 rounded-lg shadow-xl animate-fadeIn">
+      <a href="checkout.html" class="mt-6 inline-block px-8 py-3 bg-blue-600 text-white rounded-full text-lg shadow-lg hover:bg-blue-700 transition duration-300 animate-fadeIn">
         Buy Now
       </a>
     </div>
   </section>
 
-  <!-- ABOUT THE AUTHOR -->
+  <!-- About the Author -->
   <section id="about" class="container mx-auto px-6 py-16 text-center">
-    <h2 class="text-3xl font-semibold text-blue-900">Meet the Author</h2>
-    <img src="assets/IMG_3153.png" alt="Cierra U. Malone" class="mx-auto mt-6 rounded-full w-40 h-40 object-cover shadow-md" />
-    <p class="mt-6 text-lg max-w-3xl mx-auto text-gray-700">
+    <h2 class="text-3xl font-semibold text-blue-900">Meet Cierra U. Malone</h2>
+    <img src="assets/IMG_3153.png" alt="Cierra U. Malone" class="mx-auto mt-6 rounded-full w-40 h-40 object-cover shadow-md animate-fadeIn">
+    <p class="mt-6 text-lg max-w-3xl mx-auto text-gray-700 animate-fadeIn">
       Cierra U. Malone is an educator and entrepreneur born and raised in Cleveland, Ohio. She is a graduate of Cleveland City Schools and is
       dedicated to empowering individuals through education and leadership. She aspires to establish her own charter school, where she can create
       a learning environment that fosters academic excellence, innovation, and equity for all students.
     </p>
   </section>
 
-  <!-- MENTORING & CTA -->
-  <section class="bg-gray-100 py-16 text-center">
-    <h2 class="text-3xl font-semibold text-blue-900">Speaking Engagements & Mentorship</h2>
-    <p class="mt-4 text-lg text-gray-700">Looking for an inspiring speaker? Cierra U. Malone offers mentoring and leadership talks for businesses, schools, and events.</p>
-    <a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="mt-6 inline-block px-6 py-3 bg-blue-600 text-white rounded-full text-lg shadow-lg hover:bg-blue-700">
+  <!-- One-on-One Mentorship -->
+  <section id="mentorship" class="bg-gray-100 py-16 text-center">
+    <h2 class="text-3xl font-semibold text-blue-900">One-on-One Mentorship</h2>
+    <p class="mt-4 text-lg text-gray-700 animate-fadeIn">
+      Unlock your full potential through personalized mentorship designed to guide you beyond your boundaries. Cierra U. Malone brings her passion for education, leadership, and personal empowerment to every session, helping you build your blueprint for lasting success.
+    </p>
+    <a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="mt-6 inline-block px-6 py-3 bg-blue-600 text-white rounded-full text-lg shadow-lg hover:bg-blue-700 animate-fadeIn">
       Book a Session
     </a>
   </section>
 
-  <!-- SOCIAL MEDIA -->
+  <!-- Meet & Mentor Program -->
   <section class="container mx-auto px-6 py-16 text-center">
-    <h2 class="text-3xl font-semibold text-blue-900">Follow & Connect</h2>
-    <p class="mt-4 text-lg text-gray-700">Stay connected and inspired:</p>
+    <h2 class="text-3xl font-semibold text-blue-900">Meet & Mentor Program</h2>
+    <p class="mt-4 text-lg text-gray-700 animate-fadeIn">
+      Join Cierra for exclusive Meet & Mentor experiences where inspiration meets action. Network, learn, and launch into your next chapter with confidence.
+    </p>
+    <a href="https://calendly.com/teamcierramalone/30min" target="_blank" class="mt-6 inline-block px-6 py-3 bg-green-500 text-white rounded-full text-lg shadow-lg hover:bg-green-600 animate-fadeIn">
+      Reserve Your Spot
+    </a>
+  </section>
+
+  <!-- Testimonials -->
+  <section class="bg-gray-50 py-16 text-center">
+    <h2 class="text-3xl font-semibold text-blue-900">Testimonials</h2>
+    <div class="mt-10 grid gap-6 md:grid-cols-2 max-w-4xl mx-auto animate-fadeIn">
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <p class="italic text-gray-700">"Cierra’s mentorship helped me level up my mindset and business!"</p>
+        <p class="mt-4 font-semibold text-gray-900">— Instagram Follower</p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <p class="italic text-gray-700">"Her words stayed with me long after the session. So inspiring!"</p>
+        <p class="mt-4 font-semibold text-gray-900">— Community Member</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Social Media Connect -->
+  <section class="container mx-auto px-6 py-16 text-center">
+    <h2 class="text-3xl font-semibold text-blue-900">Stay Connected</h2>
+    <p class="mt-4 text-lg text-gray-700">Follow Cierra U. Malone for inspiration, updates, and events:</p>
     <div class="mt-6 flex justify-center space-x-6 text-blue-600 text-lg">
       <a href="https://www.instagram.com/cierraumalone" target="_blank" class="hover:underline">Instagram</a>
       <a href="https://facebook.com/CierraUMalone" target="_blank" class="hover:underline">Facebook</a>
@@ -80,7 +105,7 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
+  <!-- Footer -->
   <footer class="bg-blue-900 text-white text-center py-10">
     <img src="assets/cieereumalonelogo.png" alt="Logo" class="h-12 mx-auto mb-4" />
     <p class="text-sm mb-2">&copy; 2025 Cierra U. Malone. All rights reserved.</p>
