--- a/checkout.html
+++ b/checkout.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout - Life's Blueprint</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Checkout - Life's Blueprint</title>
+
+  <!-- Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
+  <!-- Custom Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Poppins', sans-serif; }
+  </style>
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
 
-    <section class="container mx-auto px-6 py-12 text-center">
-        <h2 class="text-3xl font-semibold">Checkout</h2>
-        <p class="mt-2 text-lg font-semibold">You're purchasing: <strong>Life's Blueprint: Goals, Gratitude, and Growing Beyond Boundaries</strong></p>
-        <p class="mt-2 text-lg font-semibold">Price: $23.99</p>
+<body class="bg-white text-gray-900">
 
-        <!-- Payment Link -->
-<a href="https://a.co/d/1yzYxuD" 
-   class="mt-6 inline-block px-6 py-3 bg-yellow-500 text-white rounded-lg text-lg shadow-lg hover:bg-yellow-600">
-   Buy on Amazon
-</a>
+  <!-- Navigation -->
+  <nav class="bg-white shadow-md py-4 fixed top-0 left-0 w-full z-50">
+    <div class="container mx-auto flex items-center justify-between px-4 sm:px-6">
+      <div class="flex items-center space-x-3">
+        <img src="assets/cieereumalonelogo.png" alt="Logo" class="h-10 w-auto">
+        <span class="text-xl font-bold text-gray-900">Life’s Blueprint</span>
+      </div>
+      <ul class="hidden md:flex space-x-6 text-gray-800 font-medium">
+        <li><a href="index.html" class="hover:text-blue-600">Home</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="h-20"></div>
 
-<!-- Thank You Message -->
-<div class="mt-10 text-center">
-    <h2 class="text-2xl font-bold text-gray-900 dark:text-gray-100">
-        Thank You for Purchasing!
-    </h2>
-    <p class="mt-2 text-lg text-gray-700 dark:text-gray-300">
-        Your support means the world! I hope this book inspires and empowers you.  
-    </p>
-</div>
+  <!-- Checkout Section -->
+  <section class="container mx-auto px-6 py-16 text-center">
+    <h1 class="text-4xl font-semibold text-blue-900 mb-8">Secure Your Copy</h1>
 
-<!-- Author Image -->
-<div class="flex justify-center mt-6">
-    <img src="assets/IMG_3154.png" 
-         alt="Cierra U. Malone" 
-         class="rounded-lg shadow-lg w-48 h-48 object-cover">
-</div>
+    <div class="bg-gray-100 p-8 rounded-lg shadow-lg max-w-md mx-auto">
+      <h2 class="text-2xl font-bold mb-6 text-gray-800">Order Summary</h2>
+      <p class="mb-4 text-gray-700">Book: <span class="font-semibold">Life's Blueprint</span></p>
+      <p class="mb-8 text-gray-700">Price: <span class="font-semibold">$23.99</span></p>
 
+      <form action="#" method="POST" class="space-y-4">
+        <input type="text" placeholder="Full Name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-300" required>
+        <input type="email" placeholder="Email Address" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-300" required>
 
-        
-        <!-- Back Button -->
-        <div class="mt-6">
-            <a href="index.html" class="text-blue-500 hover:underline">Back to Home</a>
-        </div>
-    </section>
+        <a href="https://a.co/d/1yzYxuD" target="_blank" class="block w-full mt-6 px-6 py-3 bg-green-500 text-white font-semibold rounded-full shadow-lg hover:bg-green-600 transition duration-300">
+          Pay Now
+        </a>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-blue-900 text-white text-center py-8">
+    <p class="text-sm">&copy; 2025 Cierra U. Malone. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
-
